# spydra

./: .gitignore  CONTRIBUTING.md  Dockerfile  GITHUB_PUBLISH_GUIDE.md  MANIFEST.in  README.md  benchmarks.py  pyproject.toml  ruff.toml  server.json  setup.cfg  tox.ini  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  02-feature_request.yml  04-docs_issue.yml  config.yml
.github/workflows/: code-quality.yml  docker-build.yml  release-and-publish.yml  tests.yml
agent-skill/: README.md
agent-skill/Scrapling-Skill/: SKILL.md
docs/: README_AR.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JP.md  README_KR.md  README_PT_BR.md  README_RU.md  benchmarks.md  donate.md  index.md  overview.md
docs/ai/: mcp-server.md
docs/api-reference/: custom-types.md  fetchers.md  mcp-server.md  proxy-rotation.md  response.md  selector.md  spiders.md
docs/cli/: extract-commands.md  interactive-shell.md  overview.md
docs/development/: adaptive_storage_system.md  scrapling_custom_types.md  spydra_custom_types.md
docs/fetching/: choosing.md  dynamic.md  static.md  stealthy.md
docs/overrides/: main.html
docs/parsing/: adaptive.md  main_classes.md  selection.md
docs/spiders/: advanced.md  architecture.md  generic-templates.md  getting-started.md  proxy-blocking.md  requests-responses.md  sessions.md
docs/tutorials/: migrating_from_beautifulsoup.md  replacing_ai.md
spydra/: __init__.py  cli.py  parser.py
spydra/ai/: __init__.py  extractor.py  schema.py  selector.py
spydra/antibot/: __init__.py  behavior.py  captcha.py  fingerprint.py
spydra/core/: _shell_signatures.py  ai.py  custom_types.py  mixins.py  shell.py  storage.py  translator.py
spydra/distributed/: __init__.py  sinks.py  spider.py  worker.py
spydra/engines/: static.py
spydra/fetchers/: __init__.py  chrome.py  requests.py  stealth_chrome.py
spydra/spiders/: __init__.py  cache.py  checkpoint.py  engine.py  links.py  request.py  result.py  robotstxt.py  scheduler.py  session.py  spider.py
tests/ai/: test_ai_mcp.py
tests/cli/: test_cli.py  test_shell_functionality.py
tests/core/: test_shell_core.py  test_storage_core.py
tests/fetchers/: test_base.py  test_constants.py  test_impersonate_list.py  test_merge_request_args.py  test_pages.py  test_proxy_rotation.py  test_response_handling.py  test_utils.py  test_validator.py
tests/parser/: test_adaptive.py  test_ancestor_navigation.py  test_attributes_handler.py  test_general.py  (+3 more)
(+60 files in other folders)
