[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spydra"
version = "2.0.0"
description = "Spydra — Undetectable AI-native web scraping. Distributed crawling, advanced anti-bot bypass, LLM-powered extraction."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [{name = "YukiStackAI", email = "vishwakarmashubham.2503@gmail.com"}]
keywords = ["web-scraping","ai","llm","playwright","anti-bot","fingerprint","distributed","crawler","captcha","cloudflare","stealth"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "lxml>=6.0.3",
    "cssselect>=1.4.0",
    "orjson>=3.11.8",
    "tld>=0.13.2",
    "w3lib>=2.4.1",
    "typing_extensions",
]

[project.optional-dependencies]
fetchers = [
    "click>=8.3.0",
    "curl_cffi>=0.15.0",
    "playwright==1.58.0",
    "patchright==1.58.2",
    "browserforge>=1.2.4",
    "apify-fingerprint-datapoints>=0.12.0",
    "msgspec>=0.21.1",
    "anyio>=4.13.0",
    "protego>=0.6.0",
]
ai = ["mcp>=1.27.0", "markdownify>=1.2.0", "spydra[fetchers]"]
shell = ["IPython>=8.37", "markdownify>=1.2.0", "spydra[fetchers]"]
ai-extract = ["openai>=1.0.0", "anthropic>=0.25.0", "pydantic>=2.0.0", "spydra[fetchers]"]
antibot    = ["requests>=2.31.0", "spydra[fetchers]"]
distributed = ["redis>=5.0.0", "httpx>=0.27.0", "spydra[fetchers]"]
all = ["spydra[ai,shell,ai-extract,antibot,distributed]"]

[project.urls]
Homepage      = "https://github.com/YukiStackAI/spydra"
Documentation = "https://spydra.readthedocs.io"
Repository    = "https://github.com/YukiStackAI/spydra"
"Bug Tracker" = "https://github.com/YukiStackAI/spydra/issues"

[project.scripts]
spydra = "spydra.cli:main"
spydra-worker = "spydra.distributed.worker:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spydra*"]

[tool.setuptools]
zip-safe = false
include-package-data = true
